--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,17 +1,17 @@
 {
-    "installCommand": "npm install --legacy-peer-deps",
     "version": 2,
+    "installCommand": "npm install --legacy-peer-deps",
     "builds": [
       {
-        "src": "index.js",
+        "src": "backend/index.js",
         "use": "@vercel/node"
-      },
-      {
-        "src": "src/**/*",
-        "use": "@vercel/static"
       }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/" }
+      {
+        "src": "/api/(.*)",
+        "dest": "/backend/index.js"
+      }
     ]
   }
+  
