--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,15 +3,16 @@
     "installCommand": "npm install --legacy-peer-deps",
     "builds": [
       {
-        "src": "backend/index.js",
+        "src": "index.js", 
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/api/(.*)",
-        "dest": "/backend/index.js"
+        "dest": "/index.js"  
       }
     ]
   }
+  
   
