--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -5,12 +5,16 @@
       {
         "src": "index.js", 
         "use": "@vercel/node"
+      },
+      {
+        "src": "src/**/*", 
+        "use": "@vercel/static"
       }
     ],
     "routes": [
       {
-        "src": "/api/(.*)",
-        "dest": "/index.js"  
+        "src": "/(.*)",
+        "dest": "/"  
       }
     ]
   }
